# SuperExp_ALIFE_2022

./: LICENSE  README.md  modules.txt  replication.txt
code/: module_factories.cpp  module_factories.h
code/Optimizer/DriftPoolLODOptimizer/: CMakeLists.txt  DriftPoolLODOptimizer.cpp  DriftPoolLODOptimizer.h
code/Optimizer/DriftPoolRouletteOptimizer/: CMakeLists.txt  DriftPoolRouletteOptimizer.cpp  DriftPoolRouletteOptimizer.h
code/Utilities/: gitversion.h
code/World/NKLandscapeWorld/: CMakeLists.txt  NKLandscapeWorld.cpp  NKLandscapeWorld.h
code/World/SawGenesWorld/: CMakeLists.txt  SawGenesWorld.cpp  SawGenesWorld.h
run_NK/: mq_conditions.txt  settings.cfg  settings_organism.cfg  settings_world.cfg
run_saw_4/: mq_conditions.txt  settings_world.cfg
run_saw_5/: mq_conditions.txt  settings.cfg  settings_organism.cfg  settings_world.cfg
run_saw_6/: mq_conditions.txt  settings_world.cfg
run_saw_7/: mq_conditions.txt  settings_world.cfg
